@@ -3,8 +3,10 @@ qgis (2.9.0) UNRELEASED; urgency=medium
   * New development version 2.9 after branch of 2.8
   * include dependency to liblwgeom
   * 'stretch' package a bit
+  * merge downstream addition of debug package
+  * make build directory configurable
 
- -- Jürgen E. Fischer <jef@norbit.de>  Fri, 22 May 2015 08:34:55 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Thu, 28 May 2015 00:35:42 +0200
 
 qgis (2.8.0) unstable; urgency=medium
 
